blocks/profile.css
.profile {
    display: flex;
    align-items: center;
    position: relative;
    padding-top: 40px;
    max-width: 880px;
    width: 100%;
}

.profile__image {
    border-radius: 50%;
    width: 120px;
    height: 120px;
    object-fit: cover;
    background-position: center;
    margin-right: 24px;
}

.profile__info {
    max-width: 415px;
    width: 100%;
    display: grid;
    align-items: baseline;
    grid-template-areas: "title button" "description description";
}

.profile__title {
    margin: 0;
    font-size: 42px;
    line-height: 1.14;
    font-weight: 500;
    grid-area: title;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    max-width: 373px;
}

.profile__description {
    margin: 0;
    font-size: 18px;
    line-height: 1.2;
    font-weight: 400;
    grid-area: description;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    max-width: 415px;
}

.profile__edit-button {
    margin-left: auto;
    background: transparent url(../images/EditButtonVector.png) center no-repeat;
    width: 24px;
    height: 24px;
    border: 1px solid #fff;
    grid-area: button;
}
.profile__edit-button:hover {
    opacity: 0.6;
    cursor: pointer;
}

.profile__add-button {
    background: transparent url(../images/Add\ Button.svg) center no-repeat;
    max-width: 150px;
    width: 100%;
    height: 50px;
    margin-left: auto;
    border: 2px solid #fff;
    border-radius: 2px;
}

.profile__add-button:hover {
    opacity: 0.6;
    cursor: pointer;
}

@media screen and (max-width: 620px) {
    .profile {
        flex-direction: column;
    }

    .profile__info {
        max-width: 282px;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        text-align: center;
    }
    .profile__image {
        margin: 0;
    }

    .profile__title {
        width: 196px;
        margin-top: 30px;
        margin-left: 20px;
        font-size: 22px;
        line-height: 26.63px;
    }

    .profile__description {
        width: 282px;
        font-size: 14px;
        line-height: 22px;
        margin-top: 14px;
        margin-bottom: 36px;
    }

    .profile__edit-button {
        margin-left: 10px;
        background-size: 7.5px 7.5px;
        width: 18px;
        height: 18px;
    }

    .profile__add-button {
        background: transparent url(../images/AddButton320.png) center no-repeat;
        max-width: 282px;
        margin: 0;
    }
}

